@@ -150,6 +150,10 @@ int main(void)
 "typedef gint		(*GCompareFunc)		(gconstpointer	a,\n"
 "						 gconstpointer	b);\n"
 "\n"
+"typedef void           (*GDestroyNotify)       (gpointer       data);\n"
+"\n"
+"typedef void           (*GFreeFunc)            (gpointer       data);\n"
+"\n"
 "\n"
 "WIN32_DLL GSList *g_slist_insert_sorted	(GSList		*list,\n"
 "						 gpointer	 data,\n"
@@ -215,6 +219,11 @@ int main(void)
 "\n"
 "WIN32_DLL GHashTable *g_hash_table_new	(GHashFunc	 hash_func,\n"
 "					 GCompareFunc	 key_compare_func);\n"
+"\n"
+"WIN32_DLL GHashTable *g_hash_table_new_full (GHashFunc       hash_func,\n"
+"                                             GCompareFunc    key_equal_func,\n"
+"                                             GDestroyNotify  key_destroy_func,\n"
+"                                             GDestroyNotify  value_destroy_func);\n"
 "\n"
 "WIN32_DLL void	g_hash_table_destroy	(GHashTable	*hash_table);\n"
 "\n"
